--- a/index_DCD1.html
+++ b/index_DCD1.html
@@ -46,7 +46,7 @@
             <div id="menu_center">
                 <div class="topnav" id="myTopnav">
 
-                    <a id="mn" onclick="funcplay()">
+                    <a id="mn" href="index.html">
                         <img id="icon_mn" src="img/icon/home.png">
                         Trang Chủ
                     </a>
@@ -58,7 +58,7 @@
                         <img id="icon_mn" src="img/icon/news.png">
                         Hoạt Động
                     </a>
-                    <a href="index_DCD1.html" id="mn">
+                    <a id="mn">
                         <img id="icon_mn" src="img/icon/map.png">
                         Địa Chỉ Đỏ
                     </a>
