--- a/index_HD1.html
+++ b/index_HD1.html
@@ -1,6 +1,215 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <head>
+        <title>Vân Quật - Hoạt Động - Hội Trại 2022</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="css/css.css">
+        <link rel="stylesheet" href="css/css_dcd.css">
+
+        <link rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script
+            src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+        <script
+            src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" type="text/css"
+            href="bootstraps/css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="bootstraps/js/bootstrap.js">
+        <link type="text/css" href="bootstrap/css/bootstrap-responsive.min.css"
+            rel="stylesheet">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+            integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+            crossorigin="anonymous" />
+        <script src="js/js.js"></script>
+        <link rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.css" />
+        <script type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/pannellum@2.5.6/build/pannellum.js"></script>
+    </head>
     <body>
-        <p>Hd1</p>
+
+        <div class="container-fluid" style="display: flex; width: 100%;">
+            <img id="logoD" src="img/banner.png">
+        </div>
+        <div class="container-fluid">
+            <div
+                style="color: black; text-align: center; height : auto; font-weight: 500; float: center;font-size: 10px;"
+                id="time">
+                <span id="ngay"></span><span>/</span>
+                <span id="thang"></span><span>/</span>
+                <span id="nam"></span><span>,</span>
+                <span id="gio">00</span><span> :</span>
+                <span id="phut">00</span><span> :</span>
+                <span id="giay">00</span><span> </span>
+            </div>
+        </div>
+        <!-- //-------------menu------------------- -->
+        <div class="container-fluid mt-2 bg-light">
+            <div id="menu_center">
+                <div class="topnav" id="myTopnav">
+
+                    <a href="index.html" id="mn" onclick="funcplay()">
+                        <img id="icon_mn" src="img/icon/home.png">
+                        Trang Chủ
+                    </a>
+                    <a href="index_GT.html" id="mn">
+                        <img id="icon_mn" src="img/icon/info.png">
+                        Giới Thiệu
+                    </a>
+                    <a href="index_HD.html" id="mn">
+                        <img id="icon_mn" src="img/icon/news.png">
+                        Hoạt Động
+                    </a>
+                    <a href="index_DCD1.html" id="mn">
+                        <img id="icon_mn" src="img/icon/map.png">
+                        Địa Chỉ Đỏ
+                    </a>
+                    <a href="index_lh.html" id="mn">
+                        <img id="icon_mn" src="img/icon/contact.png">
+                        Liên hệ
+                    </a>
+
+                    <a href="javascript:void(0);" class="icon"
+                        onclick="myFunction()">
+                        <i class="fa fa-bars"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <!-- //--------end-menu------------------- -->
+        <!-- ---------------carousel---------------- -->
+        <!-- ----------------------end carousel-------- -->
+        <!-- ---------------conten info------------- -->
+        <div class="container-fluid mt-2 bg-light">
+            <div class="row">
+                <div class="col-xs-12" id="tab3">
+                    <h3 style="text-align: center;">Hội trại truyền thống 2022:
+                        Âm Vang Tháng 8</h3>
+                    <p id="p_intro">
+                        Với không khí xôi nỗi của hội trại "ÂM VANG", vang từ
+                        ngày 19/08 đến hết tháng chưa hết vang.
+                        Gửi đến các bạn trẻ, gửi đến thế hệ thanh thiếu niên,
+                        gửi đến cánh tay đắc lực của Đảng, của Nhà nước.
+                        Chúng ta đã hết mình vì cuộc vui, vì phong trào thôn,
+                        lớn hơn là phong trào của xã nhà, chúng ta cống hiến,
+                        mang niềm vui, mang kỹ năng, và mang cả nhiệt huyết sức
+                        trẻ. Qua hội trại phần nào tâm tư, nguyện vọng của thế
+                        hệ trẻ được phơi bày, cũng như làm nóng lên tinh thần
+                        xung kích. Để có được cuộc vui, để ghi lại dấu ấn sâu
+                        sắc, thì công sức chúng ta bỏ ra phải thật xứng đáng.
+                        Ngoài các cuộc vui, Đoàn xã cùng hy vọng chúng ta vì lý
+                        tưởng cao hơn, sống cống hiến, có ích, và tốt hơn lên
+                        hằng ngày, không chỉ là sôi nổi trong phong trào, mà còn
+                        cống hiến tình nguyện, vì môi trường, vì truyền thống,
+                        vì lối sống và cả nghĩa cử cao đẹp. Mọi thứ sẽ nhanh
+                        hơn, lan tỏa mạnh hơn, tất cả dựa vào các em. Tinh thần
+                        hết mình ấy, sẵn sàng ấy, mới làm nên sức sống mãnh
+                        liệt, phồn vinh, thịnh vượng cho Tổ quốc, cũng như tươi
+                        đẹp cho Đất nước.
+                    </p>
+                    <div
+                        style="width: 100%; display:flex; justify-content:center;">
+                        <img src="img/ht5.jpg" id="sty_i">
+                    </div>
+                    <div
+                        style="width: 100%; display:flex; justify-content:center;">
+                        <img src="img/ht3.jpg" id="sty_i">
+                    </div>
+                    <p id="p_intro">Đoàn thôn Vân Quật của chúng ta đã xuất sắc
+                        nhận được là cờ đỏ vinh quang với vị trí nhất toàn đoàn,
+                        nhất trên mọi mặt trận. Kết quả đó đã cho thấy được công
+                        sức, sự cố gắng không ngừng và thời gian luyện tập cũng
+                        như một tinh thần đoàn kết
+                        đáng tự hào của các bạn Đoàn viên.
+                        mặt trận</p>
+                    <div
+                        style="width: 100%; display:flex; justify-content:center;">
+                        <img src="img/ht2.jpg" id="sty_i">
+                    </div>
+                    <p id="p_intro">CẢM ƠN THANH XUÂN CHÚNG TA LÀ MỘT NHÀ.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- -------------end conten info--------------- -->
+        <!-- ---------footer-------- -->
+        <div class="container-fluid bg-light " id="ft_bg">
+            <div class="row">
+                <div class="col-xs-6 ">
+                    <p id="ft_h">
+                        THÔNG TIN LIÊN HỆ
+                    </p>
+                    <ul id="ul_ft">
+                        <li><img src="img/icon/home.png" id="ic_ft1">
+                            Đoàn TNCH Hồ Chí Minh Thôn Vân Quật
+                        </li>
+                        <li> <img src="img/icon/map.png" id="ic_ft1">
+                            Thôn Vân Quật, Xã Duy Thành, Huyện Duy Xuyên, Tỉnh
+                            Quảng Nam
+                        </li>
+                        <li> <img src="img/icon/contact.png" id="ic_ft1">
+                            doanthonvanquat@gmail.com
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="col-xs-6 ">
+                    <p id="ft_h">
+                        THEO DÕI CHÚNG TÔI
+                    </p>
+                    <ul id="ul_ft">
+                        <li><img src="img/icon/fb.jpg" id="ic_ft">
+                            <a
+                                href="https://www.facebook.com/profile.php?id=100082551411057"
+                                style="color: #810505;">Tuổi Trẻ Vân Quật Duy
+                                Thành</a> </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <footer id="ft" class="bg-light mt-2">
+            <h6>
+                Trang web được phát triển bởi
+                <a href="https://www.facebook.com/VietAn.Tran.1606.CE001"
+                    style="color: #810505;">Trần Viết An</a>
+            </h6>
+            <h6>Trang web đang được triển khai trên nên tảng Github cá nhân</h6>
+        </footer>
+        <audio id="audio_p">
+            <source src="./audio/GiaiDieuTuHao.mp3">
+        </audio>
+        <!-- ---------end footer-------- -->
     </body>
+    <script>
+        pannellum.viewer('panorama1', {
+            "type": "equirectangular",
+            "panorama": "img/dcd_nt1.jpg",
+            "autoLoad": true
+        });
+        pannellum.viewer('panorama2', {
+            "type": "equirectangular",
+            // "panorama": "https://scontent.xx.fbcdn.net/v/t1.15752-9/358216011_185621684359638_2911792766507052994_n.jpg?stp=dst-jpg_s417x417&_nc_cat=100&ccb=1-7&_nc_sid=aee45a&_nc_ohc=YBeXgQC74jMAX_Fkk2Z&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent.xx&oh=03_AdSw7QgaLeJa0M7z0RkiEcKWk-bDgHD2zkpPrQx8um0maw&oe=64ED5D7E",
+            "panorama": "img/dcd_nt2.jpg",
+            "autoLoad": true
+        });
+
+    </script>
+    <script>
+        var audio = document.getElementById("audio_p");
+        function funcplay() {
+          audio.play();
+        }
+        function myFunction() {
+            var x = document.getElementById("myTopnav");
+            if (x.className === "topnav") {
+                x.className += " responsive";
+            } else {
+                x.className = "topnav";
+            }
+        }
+    
+      </script>
 </html>
