--- a/index_dcd_CTVQ.html
+++ b/index_dcd_CTVQ.html
@@ -58,7 +58,7 @@
                         <img id="icon_mn" src="img/icon/info.png">
                         Giới Thiệu
                     </a>
-                    <a href id="mn">
+                    <a href="index_HD.html" id="mn">
                         <img id="icon_mn" src="img/icon/news.png">
                         Hoạt Động
                     </a>
