--- a/index_dcd_NTLS.html
+++ b/index_dcd_NTLS.html
@@ -58,7 +58,7 @@
                         <img id="icon_mn" src="img/icon/info.png">
                         Giới Thiệu
                     </a>
-                    <a href id="mn">
+                    <a href="index_HD.html" id="mn">
                         <img id="icon_mn" src="img/icon/news.png">
                         Hoạt Động
                     </a>
@@ -89,7 +89,7 @@
                     style="display: flex; justify-content: center; align-items: center; width: 100%;">
                     <p
                         style="text-align: center; color: white; font-weight: 600; margin-bottom: 5px; margin-top: 3px;">Bảng
-                        đồ đi đến địa điểm:Nghĩa trang liệt sĩ Xã Duy Thành</p>
+                        đồ đi đến địa điểm: Nghĩa trang liệt sĩ Xã Duy Thành</p>
                 </div>
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d959.6277633541264!2d108.3113616!3d15.8297151!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31420925e0bdcc27%3A0x5a2d42f044dc303!2zTmdoxKlhIFRyYW5nIExp4buHdCBTxKkgRHV5IFRow6BuaA!5e0!3m2!1sen!2s!4v1690877549797!5m2!1sen!2s"
